# fs

./: CMakeLists.txt  README.md
.github/workflows/: fs-cross-platform-ci.yml  fs-strict-ci.yml
cmake/: vix_fsConfig.cmake.in
examples/: CMakeLists.txt
include/vix/fs/: AppendFile.hpp  Copy.hpp  CreateDirectories.hpp  CreateDirectory.hpp  CurrentPath.hpp  EnsureDirectory.hpp  Exists.hpp  Fs.hpp  FsEntry.hpp  FsError.hpp  FsOptions.hpp  FsPath.hpp  FsPermissions.hpp  FsResult.hpp  IsDirectory.hpp  IsFile.hpp  ListDirectory.hpp  Move.hpp  ReadFile.hpp  ReadText.hpp  Remove.hpp  RemoveAll.hpp  Rename.hpp  Size.hpp  TempDirectory.hpp  Touch.hpp  WriteFile.hpp  WriteText.hpp
src/: AppendFile.cpp  Copy.cpp  CreateDirectories.cpp  CreateDirectory.cpp  CurrentPath.cpp  EnsureDirectory.cpp  Exists.cpp  IsDirectory.cpp  IsFile.cpp  ListDirectory.cpp  Move.cpp  ReadFile.cpp  ReadText.cpp  Remove.cpp  RemoveAll.cpp  Rename.cpp  Size.cpp  TempDirectory.cpp  Touch.cpp  WriteFile.cpp  WriteText.cpp
test/: CMakeLists.txt  exists_test.cpp  list_directory_test.cpp  read_file_test.cpp  remove_test.cpp  write_file_test.cpp
